# pneumatic-heart-control

./: .gitignore  CMakeLists.txt  README.md  STM32G474RETX_FLASH.ld  arm-gcc-toolchain.cmake  main.cpp
App/Inc/: config_data.h  sensor_data.h
App/Inc/Tasks/: control_task.h  heartbeat_task.h  sensor_task.h  task_commands.h
App/Src/: config_data.cpp
App/Src/Tasks/: control_task.cpp  heartbeat_task.cpp  sensor_task.cpp
Core/Inc/: stm32g4xx_hal_conf.h  stm32g4xx_it.h
Drivers/STM32G4xx_HAL_Driver/Inc/Legacy/: stm32g4xx_hal_adc.h  stm32g4xx_hal_adc_ex.h  stm32g4xx_hal_comp.h  stm32g4xx_hal_conf_template.h  stm32g4xx_hal_dac.h  stm32g4xx_hal_dac_ex.h
Hardware/Inc/: CommonTypes.h  Peripherals.h  PressureRegulatorDriver.h
Hardware/Inc/Interfaces/: AnalogActuator.h  AnalogSensor.h  DigitalActuator.h  IAnalogActuator.h  IAnalogSensor.h  IDigitalActuator.h  IPressureControl.h  IPressureSensor.h  ISolenoidValve.h  PressureControl.h  PressureSensor.h  SolenoidValve.h
Hardware/Src/: Peripherals.cpp  PressureRegulatorDriver.cpp
